# ngw_kpt

./: .gitignore  README.md  build.sh  deploy.sh  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  supervisord.conf
backend/app/: main.py  msk_params.yaml  msk_regions.yaml
backend/app/db/: __init__.py  engine.py  tables.py
backend/app/models/: __init__.py  groups.py  tasks.py
backend/app/routing/: __init__.py  data.py  processing.py
backend/app/services/: __init__.py  handler.py  ng_toolbox.py  parsers.py  repository.py  uploader.py  work_cycle.py  worker.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  webpack.common.js  webpack.dev.js  webpack.prod.js
frontend/src/: index.html  index.js
frontend/src/css/: styles.scss
frontend/src/dynamic_modal/: index.js  styles.scss
frontend/src/js/: panel.js  table.js  uploader.js
share/: .env.example  docker-compose.yml  install.sh
